Updated the footer and css background color

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brian Mwiti Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
     <nav>
         <ul>
             <li><a href=#about"> About Me</a></li>
