Added an image of myself

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <!--About Brian Mwiti-->
     <section id="about">
         <h2>About Me</h2>
+        <div>
+            <img src="./Brian.jpeg" alt="A simple image of Brian" class="circular-image"> 
+        </div>
         <p>Hi! I'm Brian, As a passionate software engineer, I thrive on turning innovative ideas into impactful solutions. 
             With a strong foundation in coding, problem-solving, and a keen eye for detail, I specialize in crafting efficient, scalable, and user-friendly applications. 
             My experience spans across multiple industries, where I’ve developed a deep understanding of how technology can drive progress and create seamless user experiences.
