Added my whatsapp number

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <ul>
             <li><a href="https://github.com/b-r-i-a-n-1-5-9" target="_blank">GitHub</a></li>
             <li><a href="https://linkedin.com/in/brian-mwiti/" target="_blank">LinkedIn</a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=254712660935&" target="_blank">Whatsapp</a></li>
         </ul>
     </section>
     <footer>
